--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My blog
+title: nanoteyep's blog
 author: nanoteyep
 email: tolight20@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
