--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,14 @@ plainwhite:
 # Build settings
 remote_theme: plainwhite
 
+# Math equation
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
+
+
 plugins:
   - jekyll-seo-tag
   - webrick
