--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,7 @@ author: nanoteyep
 email: tolight20@gmail.com
 url: "https://nanoteyep.github.io"
 description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Hello. This is a Blog for nanoteyep!
 show_excerpts: true # set to true to show excerpts on the homepage
 
 # Minima date format
