--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,10 @@ plainwhite:
       url: "/DataScience"
     - title: Project
       url: "/Project"
-    - title: CodingTest
+    - title: Coding Test
       url: "/CodingTest"
+    - title: Paper Review
+      url: "/PaperReview"
   condensed_mobile:
     - home
     - page
