--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,10 @@ plainwhite:
   html_lang: "en" # set the lang attribute of the <html> tag for the pages. See here for a list of codes: https://www.w3schools.com/tags/ref_country_codes.asp
   analytics_id: "tolight20@gmail.com"
   navigation:
-    - title: Road to Datascientist
+    - title: Road to DataScientist
       url: "/DataScience"
+    - title: Road to DataEngineer
+      url: "/DataEngineering"
     - title: Project
       url: "/Project"
     - title: Coding Test
